expose Item Year to the API
